--- a/.config/i3/config
+++ b/.config/i3/config
@@ -3,11 +3,10 @@
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 #
 
-
 ##### AUTOLOAD #####
 ################################################################################
 # display
-exec_always --no-startup-id ~/.config/i3/scripts/xrandr
+exec_always --no-startup-id ~/.config/i3/scripts/dual
 # wallpaper
 exec_always --no-startup-id ~/.config/i3/scripts/fehbg
 ################################################################################
@@ -151,48 +150,30 @@ set_from_resource $term_color13    color13
 set_from_resource $term_color14    color14
 set_from_resource $term_color15    color15
 
-# base16 onedark
-set $base00 #282c34
-set $base01 #353b45
-set $base02 #3e4451
-set $base03 #545862
-set $base04 #565c64
-set $base05 #abb2bf
-set $base06 #b6bdca
-set $base07 #c8ccd4
-set $base08 #e06c75
-set $base09 #d19a66
-set $base0A #e5c07b
-set $base0B #98c379
-set $base0C #56b6c2
-set $base0D #61afef
-set $base0E #c678dd
-set $base0F #be5046
-
 #######################|#######|#######|#######|#########|############
 # class                |border |bg.    |text   |indicator|child_border
 #######################|#######|#######|#######|#########|############
-client.focused          $base05 $base0D $base00 $base0D $base0C
-client.focused_inactive $base01 $base01 $base05 $base03 $base01
-client.unfocused        $base01 $base00 $base05 $base01 $base01
-client.urgent           $base08 $base08 $base00 $base08 $base08
-client.placeholder      $base00 $base00 $base05 $base00 $base00
-client.background       $base07
+client.focused          #6272A4 #6272A4 #F8F8F2 #6272A4   #6272A4
+client.focused_inactive #44475A #44475A #F8F8F2 #44475A   #44475A
+client.unfocused        #282A36 #282A36 #BFBFBF #282A36   #282A36
+client.urgent           #44475A #FF5555 #F8F8F2 #FF5555   #FF5555
+client.placeholder      #282A36 #282A36 #F8F8F2 #282A36   #282A36
+client.background       #F8F8F2
 
 bar {
     colors {
-        background $base00
-        separator  $base01
-        statusline $base04
+        background #282A36
+        statusline #F8F8F2
+        separator  #44475A
 
 #       ##################|#######|#######|#######
 #       State             |border |bg.    |text
 #       ##################|#######|#######|#######
-        focused_workspace  $base05 $base0D $base00
-        active_workspace   $base05 $base03 $base00
-        inactive_workspace $base03 $base01 $base05
-        urgent_workspace   $base08 $base08 $base00
-        binding_mode       $base00 $base0A $base00
+        focused_workspace  #44475A #44475A #F8F8F2
+        active_workspace   #282A36 #44475A #F8F8F2
+        inactive_workspace #282A36 #282A36 #BFBFBF
+        urgent_workspace   #FF5555 #FF5555 #F8F8F2
+        binding_mode       #FF5555 #FF5555 #F8F8F2
     }
     position top
     tray_output primary
@@ -265,7 +246,7 @@ bindsym $mod+Return exec terminal
 bindsym $mod+Shift+q kill
 
 # start program launcher
-bindsym $mod+d exec --no-startup-id dmenu_run
+bindsym $mod+d exec --no-startup-id "dmenu_run -nf '#F8F8F2' -nb '#282A36' -sb '#6272A4' -fn 'Firacode Nerd Font Mono-12' -sf '#F8F8F2'"
 
 # launch categorized menu
 bindsym $mod+z exec --no-startup-id morc_menu
@@ -410,7 +391,22 @@ bar {
 
     bindsym button4 nop
     bindsym button5 nop
-    strip_workspace_numbers yes
+    workspace_buttons no
+
+    colors {
+        background #282A36
+        statusline #F8F8F2
+        separator  #44475A
+
+#       ##################|#######|#######|#######
+#       State             |border |bg.    |text
+#       ##################|#######|#######|#######
+        focused_workspace  #44475A #44475A #F8F8F2
+        active_workspace   #282A36 #44475A #F8F8F2
+        inactive_workspace #282A36 #282A36 #BFBFBF
+        urgent_workspace   #FF5555 #FF5555 #F8F8F2
+        binding_mode       #FF5555 #FF5555 #F8F8F2
+    }
 }
 
 # hide/unhide i3status bar
