--- a/.config/i3/config
+++ b/.config/i3/config
@@ -6,9 +6,9 @@
 ##### AUTOLOAD #####
 ################################################################################
 # display
-exec_always --no-startup-id ~/.config/i3/scripts/dual
+exec --no-startup-id ~/.config/i3/scripts/xrandr_dual_horizontal
 # wallpaper
-exec_always --no-startup-id ~/.config/i3/scripts/fehbg
+exec --no-startup-id ~/.config/i3/scripts/fehbg_dual
 ################################################################################
 
 
@@ -190,9 +190,9 @@ bar {
 ################################################################################
 # system control mode
 set $i3exit ~/.config/i3/scripts/i3exit
+set $mode_system switch_(u)ser|(e)xit|(l)ock|(s)uspend|(r)eboot|(Shift+s)hutdown
 bindsym $mod+Pause mode "$mode_system"
 bindsym $mod+Shift+e mode "$mode_system"
-set $mode_system switch_(u)ser|(e)xit|(l)ock|(s)uspend|(r)eboot|(Shift+s)hutdown
 mode "$mode_system" {
     bindsym u exec --no-startup-id $i3exit switch_user, mode "default"
     bindsym e exec --no-startup-id $i3exit exit, mode "default"
@@ -210,26 +210,40 @@ mode "$mode_system" {
 # resize window (you can also use the mouse for that)
 bindsym $mod+r mode "resize"
 mode "resize" {
-        # These bindings trigger as soon as you enter the resize mode
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym $left resize shrink width 10 px or 10 ppt
-        bindsym $down resize grow height 10 px or 10 ppt
-        bindsym $up resize shrink height 10 px or 10 ppt
-        bindsym $right resize grow width 10 px or 10 ppt
+    # These bindings trigger as soon as you enter the resize mode
+    # Pressing left will shrink the window’s width.
+    # Pressing right will grow the window’s width.
+    # Pressing up will shrink the window’s height.
+    # Pressing down will grow the window’s height.
+    bindsym $left resize shrink width 10 px or 10 ppt
+    bindsym $down resize grow height 10 px or 10 ppt
+    bindsym $up resize shrink height 10 px or 10 ppt
+    bindsym $right resize grow width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+    # same bindings, but for the arrow keys
+    bindsym Left resize shrink width 10 px or 10 ppt
+    bindsym Down resize grow height 10 px or 10 ppt
+    bindsym Up resize shrink height 10 px or 10 ppt
+    bindsym Right resize grow width 10 px or 10 ppt
 
-        # exit resize mode: Enter or Escape
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
+    # exit resize mode: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+    bindsym $mod+r mode "default"
+}
+
+# display setting
+set $set_xrandr ~/.config/i3/scripts/set_xrandr
+set $display dual_(v)ertical|dual_(h)orizontal|(s)olo
+bindsym $mod+Shift+d mode "$display"
+mode "$display" {
+    bindsym v exec --no-startup-id $set_xrandr dv, mode "default"
+    bindsym h exec --no-startup-id $set_xrandr dh, mode "default"
+    bindsym s exec --no-startup-id $set_xrandr s, mode "default"
+    #exit
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+    bindsym $mod+Shift+d mode "default"
 }
 ################################################################################
 
@@ -275,7 +289,7 @@ bindsym $mod+Ctrl+m exec pavucontrol
 
 # Start Applications
 bindsym $mod+Ctrl+b exec terminal -e 'bmenu'
-bindsym $mod+F2 exec firefox
+bindsym $mod+F2 exec chromium
 bindsym $mod+F3 exec thunar
 # bindsym $mod+F3 exec ranger
 bindsym $mod+Shift+F3 exec gksu thunar
